Improve AbstractCache